--- a/appsettings.example.json
+++ b/appsettings.example.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "ECommerceDB": "server=YOUR_SERVER;database=ECommerceDB;uid=USER;pwd=PASSWORD;TrustServerCertificate=True"
+        "ECommerceDB": "YOUR_CONNECTION_STRING"
     },
     "OAuth": {
         "Google": {
